apps/nextcloud/headers.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: nextcloud-headers
spec:
  headers:
    frameDeny: true
    browserXssFilter: true
    customResponseHeaders:
      Strict-Transport-Security: "15552000"
      X-Frame-Options: SAMEORIGIN
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: nextcloud-redirects-scheme
  namespace: nextcloud
spec:
  redirectScheme:
    permanent: true
    scheme: https
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: nextcloud-redirects-regex
  namespace: nextcloud
spec:
  redirectRegex:
    regex: https://(.*)/.well-known/(card|cal)dav
    replacement: https://$1/remote.php/dav/
