apps/nextcloud/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nextcloud
  strategy:
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: nextcloud
    spec:
      containers:
        - image: nextcloud:29.0.16-apache
          name: nextcloud
          ports:
            - containerPort: 80
              protocol: TCP
          volumeMounts:
            - mountPath: /var/www/html
              name: nextcloud-storage
              readOnly: false
            - mountPath: /mnt/data
              name: nextcloud-storage-nfs
              readOnly: false
      volumes:
        - name: nextcloud-storage
          persistentVolumeClaim:
            claimName: nextcloud-pvc
        - name: nextcloud-storage-nfs
          persistentVolumeClaim:
            claimName: nextcloud-pvc-nfs
